--- a/styles.css
+++ b/styles.css
@@ -4,24 +4,48 @@ html, body {
 	margin: 0;
 }
 
-section.main-graph {
-	width: 65vw;
-	height: 85vh;
-	display: inline-block;
-}
-section.error-graphs {
-	width: 33.5vw;
-	margin-left: auto;
-	height: 85vh;
-	display: inline-block;
-}
-section.inputs {
-	width: 99vw;
-	height: 11vh;
-	text-align: center;
+.container {
+	display: grid;
+	grid: 1fr 1fr / 1fr 1fr;
+	gap: 2px 2px;
+	margin: auto;
+	background-color: lightgray;
+	box-sizing: border-box;
+	max-width: 88%;
+	max-height: 100%;
 }
 
-section canvas {
-	max-width: 100%;
-	max-height: 100%;
+.container section {
+	background-color: white;
+	padding: 2%;
+}
+
+section.inputs {
+	display: grid;
+	grid: 1fr 1fr / 1fr 1fr;
+}
+
+section.inputs .input {
+	text-align: center;
+	padding: 5%;
+}
+
+input {
+	display: block;
+	margin: auto;
+	padding: 0.8rem 1.6rem;
+	width: 60%;
+	font-size: 1.4rem;
+	border-radius: 0.4rem;
+	transition: box-shadow 300ms;
+}
+input:focus {
+	outline: none;
+	box-shadow: 0.2rem 0.4rem 0.8rem #5e35b1;
+}
+
+label {
+	display: block;
+	font-size: 2rem;
+	margin: 2px;
 }
